logs/cabot-alert-ovh.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cabot_alert_ovh'...
Compiling './lib/python3.5/site-packages/cabot_alert_ovh/models.py'...
***   File "./lib/python3.5/site-packages/cabot_alert_ovh/models.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cabot_alert_ovh-1.0.0b1.egg-info'...
Listing './lib/python3.5/site-packages/ovh'...
Listing './lib/python3.5/site-packages/ovh/vendor'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/ovh/vendor/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/ovh-0.4.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
